fix: body overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@ body {
   min-height: 100vh;
 }
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -102,7 +104,6 @@ body {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
